<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/black"
        android:contentDescription="@string/Photo"
        app:layout_constraintBottom_toTopOf="@id/btnUpload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic[9]" />

    <EditText
        android:id="@+id/editTextPhotoDescription"
        android:importantForAutofill="no"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/editTextPhotoDescription"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPhoto" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@color/Upload"
        android:text="@string/btnUpload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextPhotoDescription"
        app:layout_constraintTop_toBottomOf="@id/imgPhoto" />


</androidx.constraintlayout.widget.ConstraintLayout>